starrocks/vircle-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: starrocks-fe-vs
  namespace: starrocks
spec:
  hosts:
    - '*'
  gateways:
    - istio-system/istio-ingress-gateway
  tcp:
    - match:
        - port: 9030
      route:
        - destination:
            host: kube-starrocks-fe-service.starrocks.svc.cluster.local
            port:
              number: 9030
    - match:
        - port: 8030
      route:
        - destination:
            host: kube-starrocks-fe-service.starrocks.svc.cluster.local
            port:
              number: 8030
